--- a/portal/src/main/AndroidManifest.xml
+++ b/portal/src/main/AndroidManifest.xml
@@ -5,10 +5,11 @@
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
-      android:label="@string/app_title"
+      android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".PortalActivity">
+    <activity android:name=".PortalActivity"
+        android:label="@string/app_title">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
