--- a/popmovies/build.gradle
+++ b/popmovies/build.gradle
@@ -6,7 +6,7 @@ android {
 
   defaultConfig {
     applicationId "com.udacity.zhouq.popmovies"
-    minSdkVersion 19
+    minSdkVersion 21
     targetSdkVersion 24
     versionCode 1
     versionName "1.0"
@@ -41,5 +41,7 @@ dependencies {
   compile 'com.squareup.retrofit2:retrofit:2.1.0'
   compile 'com.squareup.retrofit2:converter-gson:2.1.0'
   compile 'com.android.volley:volley:1.0.0'
+  compile 'com.squareup.sqlbrite:sqlbrite:0.8.0'
+
   testCompile 'junit:junit:4.12'
 }
